feat: Update cluster listing and creation endpoints
- Added `ListClusterCommand` to the list of exported commands in `golem_workers/commands/__init__.py`
- Updated version number and description in `pyproject.toml`
- Added `list_cluster.py` file to the `golem_workers/commands` directory
- Added new endpoints and renamed existing endpoints in `golem_workers/entrypoints/web/endpoints.py`
- Modified `openapi.json` file to reflect the changes in the endpoints
- Made various changes to improve readability and functionality in `examples/sd-example/sd-inference.py`
